# circuitpython-mhz19

./: LICENSE  README.rst  README.rst.license  mhz19.py  optional_requirements.txt  pyproject.toml
examples/: mhz19_simpletest.py
