# SPDX-FileCopyrightText: 2024 Bernhard Bablok
#
# SPDX-License-Identifier: MIT

[build-system]
requires = [
    "setuptools",
    "wheel",
    "setuptools-scm",
]

[project]
name = "circuitpython-mhz19"
description = "CircuitPython library for the MH-Z19 CO2 sensor."
version = "0.0.0+auto.0"
readme = "README.rst"
authors = [
    {name = "Bernhard Bablok", email = "bablokb@gmx.de"}
]
urls = {Homepage = "https://github.com/bablokb/circuitpython-mhz19"}
keywords = [
    "mhz19",
    "co2",
    "sensor",
    "hardware",
    "circuitpython",
]
license = {text = "MIT"}
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: System :: Hardware",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
py-modules = ["mhz19"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {optional = {file = ["optional_requirements.txt"]}}
